[TASK] Fixed some issues with MIME types

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,26 @@ http {
         listen [::]:80;
 
         root /webgl;
-        
+
+        include  /etc/nginx/mime.types;
+
         location / {
             index  index.html index.htm;
         }
 
+        location ~ .+\.js\.gz$ {
+            add_header Content-Encoding gzip;
+            default_type application/javascript;
+        }
+
+        location ~ .+\.wasm\.gz$ {
+            add_header Content-Encoding gzip;
+            default_type application/wasm;
+        }
+
         location ~ .+\.(unityweb|gz)$ {
             add_header Content-Encoding gzip;
+            default_type application/octet-stream;
         }
     }
 }
