[TASK] Added support for brotli-compressed builds + added docker-compose with SSL support and instructions on how to use that

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,16 +17,49 @@ http {
         location ~ .+\.js\.gz$ {
             add_header Content-Encoding gzip;
             default_type application/javascript;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
         }
 
         location ~ .+\.wasm\.gz$ {
             add_header Content-Encoding gzip;
             default_type application/wasm;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
         }
 
         location ~ .+\.(unityweb|gz)$ {
             add_header Content-Encoding gzip;
             default_type application/octet-stream;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
+        }
+
+        location ~ .+\.js\.br$ {
+            add_header Content-Encoding br;
+            default_type application/javascript;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
+        }
+
+        location ~ .+\.wasm\.br$ {
+            add_header Content-Encoding br;
+            default_type application/wasm;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
+        }
+
+        location ~ .+\.br$ {
+            add_header Content-Encoding br;
+            default_type application/octet-stream;
+
+            # This header is needed to prevent CDNs like Cloudflare from compressing the files twice
+            add_header Cache-Control no-transform;
         }
     }
 }
